Fix submenu elements overlapping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,7 +77,7 @@ hr, #content article {
 }
 .nav-sub li.active a,
 .nav-sub li a:hover {
-  background-color: rgba(195, 50, 95, 0.8);
+  background-color: #edc1cf;
 }
 
 header {
@@ -86,7 +86,7 @@ header {
 }
 
 .nav-sub .nav-nav > li > a:hover, .nav-sub .nav-nav > li.active > a, .nav-sub .nav-nav > li.active > a:hover, .nav-sub li a, .nav-sub li a.breadcrumb {
-  background-color: rgba(195, 50, 95, 0.5);
+  background-color: #e198af;
   color: white;
 }
 
