--- a/assets/sass/modules/_nav.sass
+++ b/assets/sass/modules/_nav.sass
@@ -26,4 +26,4 @@
 
   li.active a,
   li a:hover
-    background-color: fade($color-base, 80)
+    background-color: mix(white, $color-base, 70)
