--- a/assets/sass/states/_active.sass
+++ b/assets/sass/states/_active.sass
@@ -3,7 +3,7 @@
   color: white
 
 %block-accent%is-hover
-  background-color: fade($color-base, 50)
+  background-color: mix(white, $color-base, 50)
   color: white
 
 %block-accent%is-relief
